@@ -1,5 +1,5 @@
 GDB_VERSION = 6.3.50-20050815
-GDB_RC_VERSION = 1344
+GDB_RC_VERSION = 1346
 
 BINUTILS_VERSION = 2.13-20021117
 BINUTILS_RC_VERSION = 46
